--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>최원영과 이소민의 결혼식</title>
-    <meta content="최원영과 이소민의 결혼식에 와서 축하해주세요~!" name="description"/>
+    <title>윤근우와 장현하의 결혼식</title>
+    <meta content=">윤근우와 장현하의 결혼식에 와서 축하해주세요~!" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
     <meta property="fb:admins" content="Choi.Anderson"/>
@@ -102,7 +102,7 @@
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
                         <b style="font-size:1.4em;">2019. 05. 18. SAT PM 02:30</b>
-                        <br>부산 해운대 센텀시티 센텀사이언스파크 23층
+                        <br>경기 교총 웨딩하우스
                     </p>
                 </div>
             </div>
@@ -133,14 +133,14 @@
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                이소민</h3>
+                                윤근우</h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                최원영</h3>
+                                장현하</h3>
                             <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
@@ -163,11 +163,11 @@
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted">부산 해운대 우동 센텀사이언스 파크 23층</span>
+                                    <span class="pl-2 text-muted">경기교총 웨딩하우스</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2019년 5월 18일, 2:30PM</span>
+                                    <span class="pl-2 text-muted">2023년 11월 05일, 1:30PM</span>
                                 </li>
                             </ul>
                         </div>
@@ -185,11 +185,11 @@
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt "></i>
-                                    <span class="pl-2 text-muted">부산 해운대 우동 센텀사이언스 파크 지하 1층 더파티 센텀점</span>
+                                    <span class="pl-2 text-muted">경기교총 웨딩하우스</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt "></i>
-                                    <span class="pl-2 text-muted">2019년 5월 18일, 2:30PM - 4:30PM</span>
+                                    <span class="pl-2 text-muted">2023년 11월 05일, 1:30PM - 2:10PM</span>
                                 </li>
                             </ul>
                         </div>
