--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         </div>
                         <div class="col text-center">
                             <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                셔틀버스 - 센텀시티역 4번출구앞에서 15분 간격으로 운행
+                                셔틀버스 - 수원역 4번출구앞에서 15분 간격으로 운행
                             </label>
                         </div>
                         <div class="my-3">
